# AlphaVantageWrapper

./: Cargo.toml  README.md
src/: main.rs
src/broker/: broker_api.rs  broker_request.rs  broker_response.rs
src/broker/response_types/: api_data.rs  mod.rs  parsed_data.rs
src/lib/: broker_api.rs  broker_options.rs  broker_request.rs  broker_response.rs  mod.rs
src/lib/response_types/: api_data.rs  mod.rs  parsed_data.rs  stockstruct.rs
