[package]
name = "alpha_vantage_wrapper"
version = "0.2.3"
authors = ["BradenEverson"]
edition = "2021"
description = "A wrapper library for the Alpha Vantage API!"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.22", features =["json"]}
serde = {version="1.0.189", features=["derive"]}
tokio = {version = "1.33.0", features = ["full"]}

